RESOLVED FIXED58004
Memory Leak in CoreIPC::decodeResourceError
https://bugs.webkit.org/show_bug.cgi?id=58004
Summary Memory Leak in CoreIPC::decodeResourceError
Michael Saboff
Reported 2011-04-06 18:35:50 PDT
The local NSError object created in decodeResourceError() has a retain count of 2 when the function exits. One is needed for the ResourceError reference argument, the other should be released directly or via an autorelease.
Attachments
Patch to wrap NSError allocation with autorelease (1.45 KB, patch)
2011-04-06 18:41 PDT, Michael Saboff
mjs: review+
Michael Saboff
Comment 1 2011-04-06 18:41:01 PDT
Created attachment 88555 [details] Patch to wrap NSError allocation with autorelease
Maciej Stachowiak
Comment 2 2011-04-06 18:46:54 PDT
Comment on attachment 88555 [details] Patch to wrap NSError allocation with autorelease r=me (But why autorelease instead of release? Explicit release is usually better.)
Darin Adler
Comment 3 2011-04-06 20:37:00 PDT
Comment on attachment 88555 [details] Patch to wrap NSError allocation with autorelease View in context: https://bugs.webkit.org/attachment.cgi?id=88555&action=review > Source/WebKit2/Shared/mac/WebCoreArgumentCodersMac.mm:188 > + NSError *nsError = [[[NSError alloc] initWithDomain:nsString(domain) code:code userInfo:userInfo] autorelease]; A plain old release is much faster than autorelease, so it would be better to do it that way.
Michael Saboff
Comment 4 2011-04-07 09:08:11 PDT
Note You need to log in before you can comment on or make changes to this bug.