2011-04-07  Michael Saboff  <msaboff@apple.com>

Reviewed by Maciej Stachowiak.

        WebKit2: Memory leak in decodeResourceError
        https://bugs.webkit.org/show_bug.cgi?id=58004

        Release the local NSError after it is used to create a ResourceError
        object assigned to the reference argument.

        * Shared/mac/WebCoreArgumentCodersMac.mm:
        (CoreIPC::decodeResourceError):


Canonical link: https://commits.webkit.org/72957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83177 268f45cc-cd09-0410-ab3c-d52691b4dbfc